# WRO2024-AFTON-SMARTWHEELS

./: README.md
other/en.VL53L4CD_ULD/STSW-IMG026/en.VL53L4CD_ULD/VL53L4CD_ULD_V2.1.1/CubeIDE_Example/: .project
other/en.VL53L4CD_ULD/VL53L4CD_ULD_V2.1.1/CubeIDE_Example/: .cproject  L4CD_Driver_Examples Debug.launch  L4CD_Driver_Examples.launch
other/en.VL53L4CD_ULD/VL53L4CD_ULD_V2.1.1/CubeIDE_Example/Core/Inc/: main.h
other/en.VL53L4CD_ULD/VL53L4CD_ULD_V2.1.1/CubeIDE_Example/Debug/: L4CD_Driver_Examples.elf  L4CD_Driver_Examples.list  L4CD_Driver_Examples.map  makefile  objects.list  sources.mk
other/en.VL53L4CD_ULD/VL53L4CD_ULD_V2.1.1/CubeIDE_Example/Debug/Core/Src/: main.d  main.su  platform.d  stm32f4xx_it.su  subdir.mk
other/en.VL53L4CD_ULD/VL53L4CD_ULD_V2.1.1/Examples/: Example_1_ranging_basic(2).c
src/afton-smartwheels/: CMakeLists.txt  index(ok).html  index(old2).html  index.html  index_old.html  sdkconfig  sdkconfig.old
src/afton-smartwheels/components/st_vl53l4cd/Platform/: platform.c  platform.h
src/afton-smartwheels/main/: CMakeLists.txt  Kconfig.projbuild  VL53L4CD_api.c  camera_capture.c  camera_capture.h  idf_component.yml  image_sender.c  image_sender.h  laser_sensor.c  laser_sensor.h  modelAi.c  modelAi.h  motor_drv.c  motor_drv.h  platform.c  self_driving_main.c  servo_drv.c  servo_drv.h  webserver.c
src/aftonAPI/: README.md  app.py  convert_model3.py  convert_modelAi.py  convert_modelONNX.py  inspect _onnx.py  requirements.txt  test_modelAi.py  training_modelAi.py
(+7 files in other folders)
